# kubequery

./: .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  mkdocs.yml  podtemplate.yaml  pyproject.toml
.github/workflows/: main.yml
docs/: index.md  modules.md
kubequery/: client.py  exceptions.py  model.py
kubequery/kubernetes/: __init__.py  resources.py  utils.py
kubequery/kubernetes/resources/: base.py  workload.py
kubequery/sql/: __init__.py
tests/: test_foo.py
tests/assets/: deployment.json  pod.json  replicaset.json
tests/unit/: test_resources.py
tests/unit/kubernetes/: test_workload.py
